fixed white styling so it is not outlined by white (for readability)

--- a/FinalProject/src/app.css
+++ b/FinalProject/src/app.css
@@ -18,7 +18,6 @@ body {
 svg text,
 svg line {
     fill: white;
-    stroke: white;
 }
 
 html {
